--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h2> Laxmi Narayan M D </h2>
-        <img src="../assets/images/self_image.jpg" height="150">
+        <img src="assets/images/self_image.jpg" height="150">
         <h3> Summary </h3>
         <p> Final year student interested in Web Development and Cyber Security </p>
         <hr />
